fix mobile layout overlap

--- a/about.css
+++ b/about.css
@@ -526,7 +526,7 @@ footer *,
     }
 
     .about {
-        z-index: 1000;
+        z-index: 999;
         position: absolute;
         top: 20%;
         left: 50%;
